...

    var title: String {
        switch self {
        case .custom: "Custom"
        case .penaltyArea: "Penalty area"
        case .goalArea: "Goal area"
        case .centreCircle: "Centre circle"
        case .goalWidth: "Goal width"
        case .halfPitch: "Half pitch"
        case .fullPitch: "Whole pitch"
        }
    }

    var mode: GroundCalibration.Mode {
        switch self {
        case .penaltyArea, .goalArea, .centreCircle, .halfPitch, .fullPitch: .plane
...
